deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nagp-user-service
  labels:
    app: nagp-user-service
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: nagp-user-service
  template:
    metadata:
      labels:
        app: nagp-user-service
    spec:
      containers:
        - name:  nagp-user-service
          image: luthrav/nagp-user-service:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 250m
              memory: 500Mi
            requests:
              cpu: 150m
              memory: 250Mi
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: dockerhub-secret
