service.yml
apiVersion: v1
kind: Service
metadata:
  name: nagp-user-service
spec:
  selector:
    app: nagp-user-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
