ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nagp-user-service-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
      paths:
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: nagp-user-service
            port:
              number: 80
